Make long URLs and other long words break within the table width. Was broken in Chrome. Fixes #339

--- a/app/assets/stylesheets/_layout_style.css.scss
+++ b/app/assets/stylesheets/_layout_style.css.scss
@@ -174,6 +174,7 @@ body.bp {
   table.table {
     box-shadow: rgba(0,0,0, 0.1) 2px 2px 3px;
     margin-bottom: 5px;
+    word-break: break-word;
 
     th {
       background: #617798;
@@ -215,6 +216,7 @@ body.bp {
   table.form {
     margin-bottom: 0;
     overflow-x: scroll;
+    word-break: break-word;
     td {
       vertical-align: top;
       min-width: 50px;
